Update MPC weights in mpc_tracker.yaml

--- a/config/mpc_tracker.yaml
+++ b/config/mpc_tracker.yaml
@@ -13,10 +13,10 @@ save_mpc_data: False
 output_csv_file: "/home/arrow/shared_volume/mpc_data.csv"
 
 # Smapling time in seconds
-dt: 0.03
+dt: 0.1
 
 # Number of MPC horizon steps, shoud be > 1
-mpc_window: 67
+mpc_window: 20
 
 # Localization frame id. Pose trajectory is published  with respect to it
 reference_frame_id: "interceptor_odom"
@@ -24,22 +24,22 @@ reference_frame_id: "interceptor_odom"
 # Smooth control signal, to avoid large control jumps 
 enable_control_smoothing: False
 # Weight/penality on control input differences
-smooth_input_weight: 10
+smooth_input_weight: 100
 
-# 3D velocity limits in m/s. Shoild be >= 0
+# 3D velocity limits in m/s. Should be >= 0
 # [x,y,z]
 max_velocity: [10.0, 10.0, 10.0]
 
 # 3D (net) acceleration limits in m/s/s. Should be >= 0
 # [x,y,z]
-max_acceleration: [4.0, 4.0, 4.0]
+max_acceleration: [5.0, 5.0, 5.0]
 
 # 3D jerk limits in m/s/s/s. Should be >= 0
 # [x,y,z]
 max_jerk: [2.0, 2.0, 2.0]
 
 # Optimization penalty on the states (Q)
-state_weight: 5000 # 7000
+state_weight: 7000 # 7000
 
 # Optimization penalty on the control inuputs (R)
-input_weight: 50 # 0.5
+input_weight: 1000 # 0.5
